--- a/estilos.css
+++ b/estilos.css
@@ -8,6 +8,11 @@ ul {
 
 li {
   float: left;
+  border-right: 1px solid #bbb;
+}
+
+li:last-child {
+  border-right: none;
 }
 
 li a {
@@ -20,4 +25,8 @@ li a {
 
 li a:hover {
   background-color: #111;
+}
+
+.active {
+  background-color: #04AA6D;
 }
