--- a/estilos.css
+++ b/estilos.css
@@ -30,3 +30,156 @@ li a:hover {
 .active {
   background-color: #04AA6D;
 }
+/* martín */
+
+.dropdown {
+position: relative;
+display: inline-block;
+}
+
+.dropdown-content {
+display: none;
+position: absolute;
+background-color: #04AA6D;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+padding: 12px 16px;
+z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+display: block;
+}
+* {
+    margin:0;
+    padding:0;
+    border:0;
+    font-size: 100%;
+    vertical-align:baseline;
+}
+body {
+    text-align: center;
+    font-family:sans-serif;
+	background-image: linear-gradient(180deg, #9cffd4 0, #87fbd1 16.67%, #6df1cc 33.33%, #48e5c5 50%, #00d9bf 66.67%, #00cebc 83.33%, #00c6bb 100%);
+}
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
+    background:url(carreraqueso.jpeg) no-repeat center;
+    background-size: cover;
+}
+.title { margin-bottom: 40px;
+    font-size: 60px;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #f9f9f9
+}
+.title1 {   margin-bottom: 40px;
+    font-size: 60px;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #303030}
+P{
+    margin-bottom: 40px;
+    font-size: 18px;
+    color:#f9f9f9;
+    padding: 0 100px;
+
+}
+.intro{ margin-bottom: 40px;
+    font-size: 18px;
+    color:#303030;
+    padding: 0 100px; }
+ 
+
+.btn {
+    display: inline-block;
+    margin-top: 15px;
+    padding: 10px 40px;
+    border: 2px solid #04AA6D;
+    text-decoration: none;
+    background-color: #04AA6D;
+}
+.btn:hover {
+    background:#6a6dcc ;
+}
+
+.content {
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items:center;
+}
+.sau {
+    padding: 50px 0;
+    background-color: #303030;
+}
+
+.box-container {
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    text-align:center;
+  
+}
+
+.box-container .box {
+    height: 170px;
+    width:270px;
+    background: #171717;
+    text-align: center;
+    border-radius: 20px;
+    box-shadow: 0 5px 5px rgba(0,0,0,0.3);
+    margin: 20px;
+    padding-bottom: 145px;
+}
+
+.box-container .box h3 {
+    font-size: 20px;
+    color: #04AA6D;
+    padding: 30px 15px;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fcf2f2;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+.desc {
+  padding: 15px;
+  text-align: center;
+}
+ /*para poner el mapa de españa de fondo*/
+ 
+#tabla1 {background-image: url("mapa.png");
+}
+td { padding-top: 520px;
+	padding-left: 90px;}
+
+#galicia {padding-right:320px}
+
+
+.price {
+    background: url(rugby.jpeg) no-repeat center;
+    background-size: cover;
+    background-attachment: fixed;
+    text-align: center;
+}
+.about {
+background: #303030;
+padding: 50px 0;
+}
+.texto {
+    color: #04AA6D;
+}
