--- a/estilos.css
+++ b/estilos.css
@@ -126,7 +126,7 @@ P{
   
 }
 
-.box-container .box {
+.nose .box-container .box {
     height: 170px;
     width:270px;
     background: #171717;
@@ -135,6 +135,16 @@ P{
     box-shadow: 0 5px 5px rgba(0,0,0,0.3);
     margin: 20px;
     padding-bottom: 145px;
+}
+
+.box-container .box {
+    height: 170px;
+    width:270px;
+    background: #171717;
+    text-align: center;
+    border-radius: 20px;
+    box-shadow: 0 5px 5px rgba(0,0,0,0.3);
+    margin: 20px;
 }
 
 .box-container .box h3 {
